add: registro de buscas implementado para findAll